Fix alignment issue in section styles by changing 'align-items' from 'top' to default value.

--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,6 @@ section {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: top;
     width: 70%;
     margin: 0 auto;
 }
